--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
-.fbLogin {
-	
+* {
+	font: 18px Helvetica, sans-serif;
+}
+
+a {
+	text-decoration: none;
+}
+
+body {
+	background-color: rgba(0, 0, 0, 0.5);
 }
